--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
 		"start": "npm-run-all --parallel start:app start:api",
 		"start:app": "react-scripts start",
 		"start:api": "json-server --watch resources/data.json --port 3004",
-		"production": "npm-run-all build serve",
+		"production": "npm run build && npm-run-all --parallel start:api serve-build",
 		"build": "react-scripts build",
-		"serve": "npm serve build",
+		"serve-build": "serve build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
 		"format": "prettier --write \"**/*.+(js|json|ts|tsx)\"",
